# codeprint

./: .gitignore  Makefile  README.md  codeprintio-1.0.5.tgz  install.ps1  install.sh  nul_file  package.json  pyproject.toml  rename.py  requirements-dev.txt  requirements.txt  setup.py  setup_old.py  tox.ini
.github/workflows/: publish.yml  release.yml  test.yml
chocolatey/: codeprint.nuspec  codeprintio.1.0.7.nupkg  codeprintio.nuspec
chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
debian/: changelog  control  copyright  install  rules
docs/: CONTRIBUTING.md
homebrew/: codeprint.rb  codeprintio.rb  gemini-scanner.rb
scripts/: postinstall.js
snap/: snapcraft.yaml
src/codeprint/: cli.py
src/gemini-scanner/: cli.py
tests/: test_detector.py  test_output.py  test_patterns.py  test_scanner.py
web/: next.config.js  package-lock.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/docs/: page.tsx
web/components/: features-section.tsx  footer.tsx  header.tsx  hero-section.tsx  installation-section.tsx  terminal-demo.tsx  use-cases-section.tsx
